Added to API doc (endpoints coming soon)
