# routes/api/v1.php
@@ -1,1 +1,6 @@
 <?php
+
+use App\Http\Controllers\Travel\CalculateTravelCO2Controller;
+use Illuminate\Support\Facades\Route;
+
+Route::post('/co2/travel', CalculateTravelCO2Controller::class);
